# KAGE-CLI

./: .coveragerc  .dockerignore  .env.example  .gitignore  AGENTS.md  BUILD_STATUS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  README.ar.md  README.bn.md  README.br.md  README.bs.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.gr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.no.md  README.pl.md  README.ru.md  README.th.md  README.tr.md  README.uk.md  README.vi.md  README.zh.md  README.zht.md  SECURITY.md  SOUL.md  bunfig.toml  config.toml  flake.nix  install  kage.py  kage_cli.py  package.json  (+5 more)
core/: brain.py  (+10 more)
kage/: .env.example  AGENTS.md  SOUL.md  SUPERVISOR.md  __init__.py  kage.py  pyproject.toml  requirements.txt
kage/agents/: __init__.py  builtin.py
kage/agents/bridge/: __init__.py  base.py  openclaw.py  opencode.py
kage/cli/: __init__.py  commands.py  completer.py  repl.py  theme.py  tui.py
kage/core/: __init__.py  actions.py  addressing.py  base_agent.py  cache.py  config.py  events.py  health.py  ipc.py  memory.py  memory_service.py  observability.py  orchestrator.py  planner.py  plugins.py  registry.py  result.py  sandbox.py  secrets.py  security.py  session.py  session_summary.py  supervisor.py  tool_manager.py
kage/examples/: research.json
kage/tests/: __init__.py  test_actions.py  test_agents.py  test_completer.py  test_core_modules.py  test_coverage_boost.py  test_integrations.py  test_ipc_tools.py  test_phases_3_8.py  test_security_hardened.py  test_supervisor.py  test_tools.py  test_tui.py  test_tui_polish.py  test_unified.py  test_v2_architecture.py  test_workflows_e2e.py
(+307 files in other folders)
